# serializer version: 1
# name: test_estimate_initial_conditions_snapshot
  dict({
    'dtype': 'float64',
    'max': 0.3707334390979684,
    'mean': 0.12499999999999997,
    'min': 0.007369879583536177,
    'shape': tuple(
      8,
    ),
    'std': 0.12094052461209008,
    'sum': 0.9999999999999998,
    'values': list([
      0.0577961311026003,
      0.3707334390979684,
      0.16217341080381148,
      0.11244009267661835,
      0.020891386951085476,
      0.020887867151791112,
      0.007369879583536177,
      0.24770779263258855,
    ]),
  })
# ---
# name: test_uniform_initial_conditions_local_snapshot
  dict({
    'dtype': 'float32',
    'max': 1.0,
    'mean': 1.0,
    'min': 1.0,
    'shape': tuple(
      1,
    ),
    'std': 0.0,
    'sum': 1.0,
    'values': list([
      1.0,
    ]),
  })
# ---
# name: test_uniform_initial_conditions_nonlocal_snapshot
  dict({
    'dtype': 'float32',
    'max': 0.0714285746216774,
    'mean': 0.071428582072258,
    'min': 0.0714285746216774,
    'shape': tuple(
      14,
    ),
    'std': 7.450580596923828e-09,
    'sum': 1.0000001192092896,
    'values': list([
      0.0714285746216774,
      0.0714285746216774,
      0.0714285746216774,
      0.0714285746216774,
      0.0714285746216774,
      0.0714285746216774,
      0.0714285746216774,
      0.0714285746216774,
      0.0714285746216774,
      0.0714285746216774,
      0.0714285746216774,
      0.0714285746216774,
      0.0714285746216774,
      0.0714285746216774,
    ]),
  })
# ---
# name: test_uniform_initial_conditions_with_mask_snapshot
  dict({
    'dtype': 'float32',
    'max': 0.1666666716337204,
    'mean': 0.09090909361839294,
    'min': 0.0,
    'shape': tuple(
      11,
    ),
    'std': 0.08298826962709427,
    'sum': 1.0,
    'values': list([
      0.1666666716337204,
      0.1666666716337204,
      0.0,
      0.0,
      0.1666666716337204,
      0.1666666716337204,
      0.1666666716337204,
      0.1666666716337204,
      0.0,
      0.0,
      0.0,
    ]),
  })
# ---
